<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_main"
        android:icon="@drawable/home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/orders"
        android:title="@string/my_orders" />

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_nav_chat"
        android:title="@string/chat" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/cart"
        android:title="@string/cart" />
    <item
        android:id="@+id/nav_control_panel"
        android:icon="@drawable/profile"
        android:title="@string/profile" />
</menu>