<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.completeProfile.CompleteProfileFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

<!--            <com.google.android.material.appbar.MaterialToolbar-->
<!--                android:id="@+id/action_bar"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="?actionBarSize"-->
<!--                android:backgrocardund="@color/white"-->
<!--                app:navigationIcon="@drawable/arrow_back" />-->


        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/medium_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large_margin"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/please_enter_the_required_information_to_complete_the_registration" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:background="@drawable/rounded_corners_strok"
                    android:hint="@string/name"
                    android:padding="@dimen/medium_margin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/email"
                    android:textColor="@color/colorPrimary" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:background="@drawable/rounded_corners_strok"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/medium_margin" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/birth_date"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:background="@drawable/rounded_corners_strok"
                    android:drawablePadding="@dimen/medium_margin"
                    android:hint="@string/birth_date"
                    android:padding="@dimen/medium_margin"
                    app:drawableEndCompat="@drawable/ic_calender" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/gender"
                    android:textColor="@color/colorPrimary" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/btn_male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginEnd="@dimen/small_margin"
                        android:layout_weight="1"
                        android:background="@drawable/selected_text"
                        android:button="@null"
                        android:checked="true"
                        android:drawableStart="@drawable/male_active"
                        android:gravity="center"
                        android:padding="@dimen/medium_margin"
                        android:text="@string/male"
                        android:textColor="@color/colorPrimary" />

                    <RadioButton
                        android:id="@+id/btn_female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_weight="1"
                        android:background="@drawable/selected_text"
                        android:button="@null"
                        android:drawableStart="@drawable/female_inactive"
                        android:gravity="center"
                        android:padding="@dimen/medium_margin"
                        android:text="@string/female"
                        android:textColor="#8f8f8f" />

                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:drawablePadding="@dimen/medium_margin"
                    android:text="@string/type_account"
                    android:textColor="@color/colorPrimary" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/btn_company"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_marginEnd="@dimen/small_margin"
                        android:layout_weight="1"
                        android:background="@drawable/selected_text"
                        android:button="@null"
                        android:checked="true"
                        android:gravity="center"
                        android:padding="@dimen/medium_margin"
                        android:text="@string/company"
                        android:textColor="@color/colorPrimary" />

                    <RadioButton
                        android:id="@+id/btn_personal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:layout_weight="1"
                        android:background="@drawable/selected_text"
                        android:button="@null"
                        android:gravity="center"
                        android:padding="@dimen/medium_margin"
                        android:text="@string/personal"
                        android:textColor="#8f8f8f" />

                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/medium_margin"
                    android:padding="12dp"
                    android:text="@string/continue_"
                    android:textAllCaps="false" />


            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>